ola-parser/src/testdata/syntaxTests/functionTypes/internal_function_struct_as_external_parameter_in_library_external.sol
library L {
    struct S
    {
        fn(uint) internal returns (uint)[] x;
    }
    fn f(S storage s) public { }
}
// ----
// TypeError 4103: (104-115): Internal type is not allowed for public or external functions.
